@@ -230,6 +230,18 @@ public class StatusBar extends JPanel implements WorkThreadProgressListener
 
 	//}}}
 
+	//{{{ getMessage() method
+	/**
+	 * Returns the current message.
+	 *
+	 * @return the current message
+	 * @since jEdit 4.4pre1
+	 */
+	public String getMessage()
+	{
+		return message.getText();
+	} //}}}
+
 	//{{{ setMessageAndClear() method
 	/**
 	 * Show a message for a short period of time.
